--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Nicolas Pandal</title>
+    <script data-goatcounter="https://nicolaspandal.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </head>
 <body>
     <h1>Nicolas Pandal</h1>
